<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mars_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the complete MARS drone delivery simulation.</description>
  <maintainer email="mars@example.com">MARS Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>mars_world</exec_depend>
  <exec_depend>mars_drone_description</exec_depend>
  <exec_depend>mars_mission_manager</exec_depend>
  <exec_depend>mars_graph_planner</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
